syntax = "proto3";

option csharp_namespace = "gRPC_Unary_Client";

package Unary;

service Unary {
  rpc SendUnaryMessage (UnaryRequest) returns (UnaryResponse);
}

message UnaryRequest {
  string name = 1;
  string message = 2;
}

message UnaryResponse {
  string message = 1;
}
